[metadata]
name = flopy
version = attr: flopy.version.__version__
description = FloPy is a Python package to create, run, and post-process MODFLOW-based models
long_description = file: docs/PyPI_release.md, LICENSE.md
long_description_content_type = text/markdown
author = FloPy Team
author_email = modflow@usgs.gov
maintainer = Joseph D. Hughes
maintainer_email = jdhughes@usgs.gov
license = CC0
license_files = LICENSE.md
platform = Windows, Mac OS-X, Linux
keywords = MODFLOW, groundwater, hydrogeology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/modflowpy/flopy
download_url = https://pypi.org/project/flopy
project_urls =
    Documentation = https://flopy.readthedocs.io
    Release Notes = https://github.com/modflowpy/flopy/blob/develop/docs/version_changes.md
    Bug Tracker = https://github.com/modflowpy/flopy/issues
    Source Code = https://github.com/modflowpy/flopy

[options]
include_package_data = True  # includes files listed in MANIFEST.in
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    numpy >=1.15.0
    matplotlib >=1.4.0

[options.extras_require]
lint =
    black
    cffconvert
    flake8
    isort
    pylint
test =
    %(lint)s
    coverage
    flaky
    filelock
    jupyter
    jupytext
    mfpymake
    pytest
    pytest-benchmark
    pytest-cases
    pytest-cov
    pytest-dotenv
    pytest-xdist
optional =
    affine
    descartes
    fiona; platform_system!='Windows'
    geojson
    netcdf4
    pandas
    pyproj
    pyshp
    python-dateutil >=2.4.0
    rasterio; platform_system!='Windows'
    rasterstats; platform_system!='Windows'
    scipy
    shapely >=1.8
    vtk
    xmipy
doc =
    %(optional)s
    ipython[kernel]
    jupytext
    nbsphinx
    nbsphinx-link
    pydata-sphinx-theme
    PyYAML
    recommonmark
    rtds-action
    sphinx-rtd-theme

[options.package_data]
flopy.mf6.data = dfn/*.dfn
flopy.plot = mplstyle/*.mplstyle

[options.packages.find]
include =
    flopy
    flopy.*

[options.entry_points]
console_scripts =
    get-modflow = flopy.utils.get_modflow:cli_main

[flake8]
exclude =
    .git
    __pycache__
    build
    dist
    examples
    autotest
ignore =
    # https://flake8.pycqa.org/en/latest/user/error-codes.html
    F401 # 'module' imported but unused
    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    E121 # continuation line under-indented for hanging indent
    E122 # continuation line missing indentation or outdented
    E126 # continuation line over-indented for hanging indent
    E127 # continuation line over-indented for visual indent
    E128 # continuation line under-indented for visual indent
    E203 # whitespace before
    E221 # multiple spaces before operator
    E222 # multiple spaces after operator
    E226 # missing whitespace around arithmetic operator
    E231 # missing whitespace after ','
    E241 # multiple spaces after ','
    E402 # module level import not at top of file
    E501 # line too long (> 79 characters)
    E502 # backslash is redundant between brackets
    E722 # do not use bare 'except'
    E741 # ambiguous variable name
    W291 # trailing whitespace
    W292 # no newline at end of file
    W293 # blank line contains whitespace
    W391 # blank line at end of file
    W503 # line break before binary operator
    W504 # line break after binary operator
statistics = True
