[metadata]
name = flopy
version = attr: flopy.version.__version__
description = FloPy is a Python package to create, run, and post-process MODFLOW-based models
long_description = file: docs/PyPI_release.md, LICENSE.md
long_description_content_type = text/markdown
author = FloPy Team
author_email = modflow@usgs.gov
maintainer = Joseph D. Hughes
maintainer_email = jdhughes@usgs.gov
license = CC0
license_files = LICENSE.md
platform = Windows, Mac OS-X, Linux
keywords = MODFLOW, groundwater, hydrogeology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/modflowpy/flopy
download_url = https://pypi.org/project/flopy
project_urls =
    Documentation = https://flopy.readthedocs.io
    Release Notes = https://github.com/modflowpy/flopy/blob/develop/docs/version_changes.md
    Bug Tracker = https://github.com/modflowpy/flopy/issues
    Source Code = https://github.com/modflowpy/flopy

[options]
include_package_data = True  # includes files listed in MANIFEST.in
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    numpy >=1.15.0
    matplotlib >=1.4.0

[options.extras_require]
lint =
    black
    cffconvert
    flake8
    isort
    pylint
test =
    %(lint)s
    coverage
    flaky
    filelock
    jupyter
    jupytext
    mfpymake
    modflow-devtools
    pytest
    pytest-benchmark
    pytest-cases
    pytest-cov
    pytest-dotenv
    pytest-xdist
optional =
    affine
    descartes
    fiona
    geojson
    netcdf4
    pandas
    pyproj
    pyshp
    python-dateutil >=2.4.0
    rasterio
    rasterstats
    scipy
    shapely >=1.8
    vtk; python_version<'3.11'
    xmipy
doc =
    %(optional)s
    ipython[kernel]
    jupytext
    nbsphinx
    nbsphinx-link
    pydata-sphinx-theme
    PyYAML
    recommonmark
    rtds-action
    sphinx-rtd-theme

[options.package_data]
flopy.mf6.data = dfn/*.dfn
flopy.plot = mplstyle/*.mplstyle

[options.packages.find]
include =
    flopy
    flopy.*

[options.entry_points]
console_scripts =
    get-modflow = flopy.utils.get_modflow:cli_main

[flake8]
exclude =
    .git
    __pycache__
    build
    dist
    examples
    autotest
ignore =
    # https://flake8.pycqa.org/en/latest/user/error-codes.html
    F401,
    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    # Indentation
    E121, E122, E126, E127, E128,
    # Whitespace
    E203, E221, E222, E226, E231, E241,
    # Import
    E402,
    # Line length
    E501, E502,
    # Statement
    E722, E741,
    # Whitespace warning
    W291, W292, W293,
    # Blank line warning
    W391,
    # Line break warning
    W503, W504
statistics = True
